quick fix ui survey on safari

--- a/front/liquid-opinion-app/src/app/components/list-survey/list-survey.component.scss
+++ b/front/liquid-opinion-app/src/app/components/list-survey/list-survey.component.scss
@@ -47,7 +47,6 @@
     .texts {
       margin-top: 15px;
       margin-bottom: 15px;
-      height: inherit;
 
       &-title {
         font-size: 20px;
